# automation-scripts

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/automation/: __init__.py  hello.py
tests/: test_hello.py
