[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-scripts"
version = "0.1.0"
description = "A collection of Python automation scripts."
authors = [{ name = "Automation User", email = "user@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["automation"]
package-dir = { "" = "src" }
